--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+aiohttp==2.2.0
+async-timeout==1.2.1
+chardet==3.0.4
 dj-database-url==0.4.1
 Django==1.9.7
 gunicorn==19.6.0
+multidict==2.1.6
 psycopg2==2.6.2
+telepot==12.0
+urllib3==1.21.1
 whitenoise==2.0.6
-telepot
+yarl==0.10.3
